--- a/KSBaoCuong2/Views/Main/DangKy.cshtml
+++ b/KSBaoCuong2/Views/Main/DangKy.cshtml
@@ -33,7 +33,7 @@
                 <i></i>
             </div>
             <div class="links">
-                <a href=https://localhost:44363/Main/DangNhap>Bạn đã có tài khoản?</a>
+                <a href="">Bạn đã có tài khoản?</a>
             </div>
             <input type="submit" value="Đăng ký" />
         </form>
