--- a/KSBaoCuong2/Views/Main/LayOut.cshtml
+++ b/KSBaoCuong2/Views/Main/LayOut.cshtml
@@ -43,7 +43,7 @@
                 </i>
             </div>
         </div>
-        <a href=https://localhost:44363/Main/DangNhap>
+        <a href="">
             <button class="btn">Đăng Nhập</button>
         </a>
     </header>
