--- a/KSBaoCuong2/Views/Main/DangNhap.cshtml
+++ b/KSBaoCuong2/Views/Main/DangNhap.cshtml
@@ -29,7 +29,7 @@
             </div>
             <div class="links">
                 <a href="#">Quên mật khẩu?</a>
-                <a href=https://localhost:44363/Main/DangKy>
+                <a href="">
                     <span>Bạn chưa có tài khoản?</span>
                 </a>
                 </div>
