--- a/KSBaoCuong2/Views/Main/LayOut.cshtml
+++ b/KSBaoCuong2/Views/Main/LayOut.cshtml
@@ -18,7 +18,7 @@
         <a href="#" class="logo">Bảo<span>Cường</span></a>
         <nav class="navbar">
             <a href="" class="active">Trang Chủ</a>
-            <a href="">Đặt Phòng</a>
+            <a href=https://localhost:44363/Main/DSPhong>Đặt Phòng</a>
             <a href="">Dịch Vụ</a>
             <a href="">Thông tin</a>
         </nav>
