--- a/KSBaoCuong2/Content/LayOut.css
+++ b/KSBaoCuong2/Content/LayOut.css
@@ -47,7 +47,7 @@ body{
     .icon > .activity-section {
         display: inline-block;
     }
-.activity-section i{
+.activity-section i {
     color: #222;
     font-size: 25px;
     margin-left: 20px;
@@ -85,3 +85,71 @@ body{
 .btn:hover{
     color: #121b46;
 }
+
+.container {
+    max-width: 1170px;
+    margin: auto;
+
+}
+.footer {
+    background: #24242b;
+    padding: 70px 0;
+    margin-top: 100px;
+    
+}
+.row{
+    display: flex;
+    flex-wrap: wrap;
+}
+.footer-col{
+    width: 25%;
+    padding: 0 15px;
+}
+.footer-col h4{
+    font-size: 18px;
+    color: #fff;
+    margin-bottom: 25px;
+    font-weight: 500;
+    position: relative;
+}
+.footer-col h4::before{
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -10px;
+    background: #ffc500;
+    height: 2px;
+    box-sizing: border-box;
+    width: 50px;
+}
+.footer-col ul{
+    list-style: none;
+}
+    .footer-col ul li a {
+        font-size: 16px;
+        text-decoration: none;
+        color: #bbbbbb;
+        display: block;
+        transition: all .3s ease;
+        margin-bottom: 10px;
+    }
+.footer-col ul li a:hover{
+    color: #fff;
+    padding-left: 6px;
+}
+.footer-col .social-link a{
+    display: inline-block;
+    height: 40px;
+    width: 40px;
+    background: rgba(255,255,255,.2);
+    margin: 0 10px 10px 0px;
+    text-align: center;
+    line-height: 40px;
+    border-radius: 50%;
+    color: #fff;
+    transition: all .5s ease;
+}
+    .footer-col .social-link a:hover {
+        color: #24262b;
+        background: #fff;
+    }
