--- a/KSBaoCuong2/Views/Main/LayOut.cshtml
+++ b/KSBaoCuong2/Views/Main/LayOut.cshtml
@@ -8,10 +8,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="~/Content/LayOut.css"/>
+    <link rel="stylesheet" type="text/css" href="~/Content/LayOut.css" />
     <title>Thanh điều hướng</title>
     <link href="http://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
-
+    <script src="https://kit.fontawesome.com/d39b623768.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header class="header">
@@ -24,29 +24,49 @@
         </nav>
         <div class="icon">
             <div class="activity-section">
-                <i>
                     <a href="">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chat-dots" viewBox="0 0 16 16">
-                            <path d="M5 8a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm3 1a1 1 0 1 0 0-2 1 1 0 0 0 0 2z" />
-                            <path d="m2.165 15.803.02-.004c1.83-.363 2.948-.842 3.468-1.105A9.06 9.06 0 0 0 8 15c4.418 0 8-3.134 8-7s-3.582-7-8-7-8 3.134-8 7c0 1.76.743 3.37 1.97 4.6a10.437 10.437 0 0 1-.524 2.318l-.003.011a10.722 10.722 0 0 1-.244.637c-.079.186.074.394.273.362a21.673 21.673 0 0 0 .693-.125zm.8-3.108a1 1 0 0 0-.287-.801C1.618 10.83 1 9.468 1 8c0-3.192 3.004-6 7-6s7 2.808 7 6c0 3.193-3.004 6-7 6a8.06 8.06 0 0 1-2.088-.272 1 1 0 0 0-.711.074c-.387.196-1.24.57-2.634.893a10.97 10.97 0 0 0 .398-2z" />
-                        </svg>
+                        <i class="fa fa-comment" aria-hidden="true"></i>
                     </a>
-                </i>
             </div>
             <div class="activity-section">
-                <i>
                     <a href="">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
-                            <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
-                        </svg>
+                        <i class="fa fa-shopping-cart" aria-hidden="true"></i>
                     </a>
-                </i>
             </div>
         </div>
         <a href="">
             <button class="btn">Đăng Nhập</button>
         </a>
     </header>
-    
+    <div class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="footer-col">
+                    <h4>Thông tin</h4>
+                    <ul>
+                        <li><a href="">Địa chỉ</a></li>
+                        <li><a href="">Số điện thoại</a></li>
+                        <li><a href="">Người tạo ra web</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>Đối tác</h4>
+                    <ul>
+                        <li><a href="">ASP.Net</a></li>
+                        <li><a href="">ChatGPT</a></li>
+                        <li><a href="">Bing AI</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>Follow us</h4>
+                    <div class="social-link">
+                        <a href="#"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
+                        <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                        <a href="#"><i class="fa fa-google" aria-hidden="true"></i></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
