--- a/KSBaoCuong2/Views/Main/XoaPhong.cshtml
+++ b/KSBaoCuong2/Views/Main/XoaPhong.cshtml
@@ -13,7 +13,55 @@
     <link rel="stylesheet" type="text/css" href="~/Content/XoaPhong.css" />
 </head>
 <body>
-    <div> 
+    <div class="font">
+        <div class="ten">
+            <h3>
+                <span>Xóa phòng</span>
+            </h3>
+            <table class="table-hinh">
+                <tr>
+                    <td>
+                        <img src="https://images.pexels.com/photos/2725675/pexels-photo-2725675.jpeg?auto=compress&cs=tinysrgb&w=600" alt="" class="anh" />
+                        <br />
+                        <h4 class="ten">Ảnh 1</h4>
+                    </td>
+                    <td>
+                        <img src="https://images.pexels.com/photos/2403017/pexels-photo-2403017.jpeg?auto=compress&cs=tinysrgb&w=600" alt="" class="anh" />
+                        <br />
+                        <h4 class="ten">Ảnh 2</h4>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <img src="https://images.pexels.com/photos/6127330/pexels-photo-6127330.jpeg?auto=compress&cs=tinysrgb&w=600" alt="" class="anh" />
+                        <br />
+                        <h4 class="ten">Ảnh 3</h4>
+                    </td>
+                    <td>
+                        <img src="https://images.pexels.com/photos/258154/pexels-photo-258154.jpeg?auto=compress&cs=tinysrgb&w=600" alt="" class="anh" />
+                        <br />
+                        <h4 class="ten">Ảnh 4</h4>
+                    </td>
+                </tr>
+            </table>
+        </div>
+        <div class="ThongTin">
+            <h2>
+                Số phòng: <span>01</span>
+            </h2>
+            <h2>
+                Tình trạng phòng: <span>Còn</span>
+            </h2>
+            <h2>
+                Ngày cập nhật: <span>2023</span>
+            </h2>
+            <h2>
+                Loại phòng: <span>VIP</span>
+            </h2>
+            <button class="btn">Xóa phòng</button>
+            <button class="btn">Quay lại</button>
+        </div>
+
     </div>
 </body>
 </html>
