--- a/KSBaoCuong2/Content/XoaPhong.css
+++ b/KSBaoCuong2/Content/XoaPhong.css
@@ -1,2 +1,65 @@
 ﻿body {
+    display: flex;
+    justify-content: space-between;
+    background: url(pexels-pixabay-258154.jpg);
+    object-fit: cover;
+    justify-content: center;
+    align-items: center;
 }
+.font {
+    display: flex;
+    width: 70%;
+    height: 90vh;
+    background: #ffffff;
+    border-radius: 30px;
+    flex-direction: row;
+}  
+.table-hinh tr td{
+    padding-right: 50px;
+}
+.ten{
+    margin-top: 0;
+    margin-left: 50px;
+    font-size: 16px;    
+}
+.anh {
+    width: 170px;
+    height: 170px;
+    border-radius: 15px;
+    margin-left: 7px;
+    margin-top: 7px;
+    transition: transform .5s ease-in-out, box-shadow .5s ease-in-out;
+}
+    .anh:hover {
+        cursor: pointer;
+        transform: scale(1.4);
+        box-shadow: 0 0 20px #00fffc;
+    }
+.ThongTin {
+    margin-top: 65px;
+    margin-left: 20px;
+}
+    .ThongTin h2{
+        cursor: default;
+    }
+    .ThongTin h2 span{
+        font-size: 20px;
+        color: #ff0000;
+    }
+.btn {
+    width: 120px;
+    height: 50px;
+    border-radius: 30px;
+    display: inline-block;
+    margin-right: 20px;
+    text-align: center;
+    margin-top: 118px;
+    background: #ffffff;
+    cursor: pointer;
+}
+    .btn:last-child {
+        margin-right: 0;
+    }
+    .btn:hover{
+        background: #ffd800;
+    }
