--- a/KSBaoCuong2/Views/Main/ThongTin.cshtml
+++ b/KSBaoCuong2/Views/Main/ThongTin.cshtml
@@ -31,7 +31,33 @@
             <td>01</td>
             <td>Còn trống</td>
             <td>Vip</td>
-            <td><img class="hinhanh" src="https://images.pexels.com/photos/2034335/pexels-photo-2034335.jpeg?auto=compress&cs=tinysrgb&w=600" alt=""/></td>
+            <td><img class="hinhanh" src="https://images.pexels.com/photos/2034335/pexels-photo-2034335.jpeg?auto=compress&cs=tinysrgb&w=600" alt="" /></td>
+            <td>2023</td>
+            <td>
+                <button class="btn">Sửa</button>
+                <br />
+                <button class="btn">Xóa</button>
+            </td>
+        </tr>
+        <tr>
+            <td>P01</td>
+            <td>01</td>
+            <td>Còn trống</td>
+            <td>Vip</td>
+            <td><img class="hinhanh" src="https://images.pexels.com/photos/2034335/pexels-photo-2034335.jpeg?auto=compress&cs=tinysrgb&w=600" alt="" /></td>
+            <td>2023</td>
+            <td>
+                <button class="btn">Sửa</button>
+                <br />
+                <button class="btn">Xóa</button>
+            </td>
+        </tr>
+        <tr>
+            <td>P01</td>
+            <td>01</td>
+            <td>Còn trống</td>
+            <td>Vip</td>
+            <td><img class="hinhanh" src="https://images.pexels.com/photos/2034335/pexels-photo-2034335.jpeg?auto=compress&cs=tinysrgb&w=600" alt="" /></td>
             <td>2023</td>
             <td>
                 <button class="btn">Sửa</button>
