--- a/KSBaoCuong2/Views/Main/Datphong.cshtml
+++ b/KSBaoCuong2/Views/Main/Datphong.cshtml
@@ -19,93 +19,213 @@
             <button type="submit"><i class="fa fa-search" aria-hidden="true"></i></button>
         </form>
     </div>
-    <div class="cuong1">
-        <div class="container">
-            <div class="card">
-                <div class="imgBox">
-                    <img src=https://www.hotelgrandsaigon.com/wp-content/uploads/sites/227/2017/12/GRAND_PDLK_02.jpg alt="" />
-                </div>
-                <div class="content">
-                    <h2>Phòng 01</h2>
-                    <p>Fuck U</p>
-                    <p>1.900.000 VND / Ngày</p>
-                    <button class="btn">
-                        <i class="fas fa-cart-shopping"></i>
-                        <i class="fas fa-box"></i>
-                        <span class="addCart">Thêm Phòng</span>
-                        <span class="Added">Đã Thêm</span>
-                    </button>
-                    <button class="btnxtt">
-                        <i class="fa-solid fa-eye"></i>
-                    </button>
-                </div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="card">
-                <div class="imgBox">
-                    <img src=https://www.hotelgrandsaigon.com/wp-content/uploads/sites/227/2017/12/GRAND_PDLK_02.jpg alt="" />
-                </div>
-                <div class="content">
-                    <h2>Phòng 01</h2>
-                    <p>Fuck U</p>
-                    <p>1.900.000 VND / Ngày</p>
-                    <button class="btn">
-                        <i class="fas fa-cart-shopping"></i>
-                        <i class="fas fa-box"></i>
-                        <span class="addCart">Thêm Phòng</span>
-                        <span class="Added">Đã Thêm</span>
-                    </button>
-                    <button class="btnxtt">
-                        <i class="fa-solid fa-eye"></i>
-                    </button>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="cuong1">
-        <div class="container">
-            <div class="card">
-                <div class="imgBox">
-                    <img src=https://www.hotelgrandsaigon.com/wp-content/uploads/sites/227/2017/12/GRAND_PDLK_02.jpg alt="" />
-                </div>
-                <div class="content">
-                    <h2>Phòng 01</h2>
-                    <p>Fuck U</p>
-                    <p>1.900.000 VND / Ngày</p>
-                    <button class="btn">
-                        <i class="fas fa-cart-shopping"></i>
-                        <i class="fas fa-box"></i>
-                        <span class="addCart">Thêm Phòng</span>
-                        <span class="Added">Đã Thêm</span>
-                    </button>
-                    <button class="btnxtt">
-                        <i class="fa-solid fa-eye"></i>
-                    </button>
-                </div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="card">
-                <div class="imgBox">
-                    <img src=https://www.hotelgrandsaigon.com/wp-content/uploads/sites/227/2017/12/GRAND_PDLK_02.jpg alt="" />
-                </div>
-                <div class="content">
-                    <h2>Phòng 01</h2>
-                    <p>Fuck U</p>
-                    <p>1.900.000 VND / Ngày</p>
-                    <button class="btn">
-                        <i class="fas fa-cart-shopping"></i>
-                        <i class="fas fa-box"></i>
-                        <span class="addCart">Thêm Phòng</span>
-                        <span class="Added">Đã Thêm</span>
-                    </button>
-                    <button class="btnxtt">
-                        <i class="fa-solid fa-eye"></i>
-                    </button>
-                </div>
-            </div>
-        </div>
+    <div class="container">
+        <table class="table">
+            <tr>
+                <td>
+                    <div class="card">
+                        <div class="imgBox">
+                            <img src=https://www.hotelgrandsaigon.com/wp-content/uploads/sites/227/2017/12/GRAND_PDLK_02.jpg alt="" />
+                        </div>
+                        <div class="content">
+                            <h2>Phòng 01</h2>
+                            <p>Fuck U</p>
+                            <p>Vip</p>
+                            <p>1.900.000 VND / Ngày</p>
+                            <button class="btn">
+                                <i class="fas fa-cart-shopping"></i>
+                                <i class="fas fa-box"></i>
+                                <span class="addCart">Thêm Phòng</span>
+                                <span class="Added">Đã Thêm</span>
+                            </button>
+                            <button class="btnxtt">
+                                <i class="fa-solid fa-eye"></i>
+                            </button>
+                        </div>
+                    </div>
+                </td>
+                <td>
+                    <div class="card">
+                        <div class="imgBox">
+                            <img src=https://www.hotelgrandsaigon.com/wp-content/uploads/sites/227/2017/12/GRAND_PDLK_02.jpg alt="" />
+                        </div>
+                        <div class="content">
+                            <h2>Phòng 01</h2>
+                            <p>Fuck U</p>
+                            <p>Vip</p>
+                            <p>1.900.000 VND / Ngày</p>
+                            <button class="btn">
+                                <i class="fas fa-cart-shopping"></i>
+                                <i class="fas fa-box"></i>
+                                <span class="addCart">Thêm Phòng</span>
+                                <span class="Added">Đã Thêm</span>
+                            </button>
+                            <button class="btnxtt">
+                                <i class="fa-solid fa-eye"></i>
+                            </button>
+                        </div>
+                    </div>
+                </td>
+                <td>
+                    <div class="card">
+                        <div class="imgBox">
+                            <img src=https://www.hotelgrandsaigon.com/wp-content/uploads/sites/227/2017/12/GRAND_PDLK_02.jpg alt="" />
+                        </div>
+                        <div class="content">
+                            <h2>Phòng 01</h2>
+                            <p>Fuck U</p>
+                            <p>Vip</p>
+                            <p>1.900.000 VND / Ngày</p>
+                            <button class="btn">
+                                <i class="fas fa-cart-shopping"></i>
+                                <i class="fas fa-box"></i>
+                                <span class="addCart">Thêm Phòng</span>
+                                <span class="Added">Đã Thêm</span>
+                            </button>
+                            <button class="btnxtt">
+                                <i class="fa-solid fa-eye"></i>
+                            </button>
+                        </div>
+                    </div>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <div class="card">
+                        <div class="imgBox">
+                            <img src=https://www.hotelgrandsaigon.com/wp-content/uploads/sites/227/2017/12/GRAND_PDLK_02.jpg alt="" />
+                        </div>
+                        <div class="content">
+                            <h2>Phòng 01</h2>
+                            <p>Fuck U</p>
+                            <p>Vip</p>
+                            <p>1.900.000 VND / Ngày</p>
+                            <button class="btn">
+                                <i class="fas fa-cart-shopping"></i>
+                                <i class="fas fa-box"></i>
+                                <span class="addCart">Thêm Phòng</span>
+                                <span class="Added">Đã Thêm</span>
+                            </button>
+                            <button class="btnxtt">
+                                <i class="fa-solid fa-eye"></i>
+                            </button>
+                        </div>
+                    </div>
+                </td>
+                <td>
+                    <div class="card">
+                        <div class="imgBox">
+                            <img src=https://www.hotelgrandsaigon.com/wp-content/uploads/sites/227/2017/12/GRAND_PDLK_02.jpg alt="" />
+                        </div>
+                        <div class="content">
+                            <h2>Phòng 01</h2>
+                            <p>Fuck U</p>
+                            <p>Vip</p>
+                            <p>1.900.000 VND / Ngày</p>
+                            <button class="btn">
+                                <i class="fas fa-cart-shopping"></i>
+                                <i class="fas fa-box"></i>
+                                <span class="addCart">Thêm Phòng</span>
+                                <span class="Added">Đã Thêm</span>
+                            </button>
+                            <button class="btnxtt">
+                                <i class="fa-solid fa-eye"></i>
+                            </button>
+                        </div>
+                    </div>
+                </td>
+                <td>
+                    <div class="card">
+                        <div class="imgBox">
+                            <img src=https://www.hotelgrandsaigon.com/wp-content/uploads/sites/227/2017/12/GRAND_PDLK_02.jpg alt="" />
+                        </div>
+                        <div class="content">
+                            <h2>Phòng 01</h2>
+                            <p>Fuck U</p>
+                            <p>Vip</p>
+                            <p>1.900.000 VND / Ngày</p>
+                            <button class="btn">
+                                <i class="fas fa-cart-shopping"></i>
+                                <i class="fas fa-box"></i>
+                                <span class="addCart">Thêm Phòng</span>
+                                <span class="Added">Đã Thêm</span>
+                            </button>
+                            <button class="btnxtt">
+                                <i class="fa-solid fa-eye"></i>
+                            </button>
+                        </div>
+                    </div>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <div class="card">
+                        <div class="imgBox">
+                            <img src=https://www.hotelgrandsaigon.com/wp-content/uploads/sites/227/2017/12/GRAND_PDLK_02.jpg alt="" />
+                        </div>
+                        <div class="content">
+                            <h2>Phòng 01</h2>
+                            <p>Fuck U</p>
+                            <p>Vip</p>
+                            <p>1.900.000 VND / Ngày</p>
+                            <button class="btn">
+                                <i class="fas fa-cart-shopping"></i>
+                                <i class="fas fa-box"></i>
+                                <span class="addCart">Thêm Phòng</span>
+                                <span class="Added">Đã Thêm</span>
+                            </button>
+                            <button class="btnxtt">
+                                <i class="fa-solid fa-eye"></i>
+                            </button>
+                        </div>
+                    </div>
+                </td>
+                <td>
+                    <div class="card">
+                        <div class="imgBox">
+                            <img src=https://www.hotelgrandsaigon.com/wp-content/uploads/sites/227/2017/12/GRAND_PDLK_02.jpg alt="" />
+                        </div>
+                        <div class="content">
+                            <h2>Phòng 01</h2>
+                            <p>Fuck U</p>
+                            <p>Vip</p>
+                            <p>1.900.000 VND / Ngày</p>
+                            <button class="btn">
+                                <i class="fas fa-cart-shopping"></i>
+                                <i class="fas fa-box"></i>
+                                <span class="addCart">Thêm Phòng</span>
+                                <span class="Added">Đã Thêm</span>
+                            </button>
+                            <button class="btnxtt">
+                                <i class="fa-solid fa-eye"></i>
+                            </button>
+                        </div>
+                    </div>
+                </td>
+                <td>
+                    <div class="card">
+                        <div class="imgBox">
+                            <img src=https://www.hotelgrandsaigon.com/wp-content/uploads/sites/227/2017/12/GRAND_PDLK_02.jpg alt="" />
+                        </div>
+                        <div class="content">
+                            <h2>Phòng 01</h2>
+                            <p>Fuck U</p>
+                            <p>Vip</p>
+                            <p>1.900.000 VND / Ngày</p>
+                            <button class="btn">
+                                <i class="fas fa-cart-shopping"></i>
+                                <i class="fas fa-box"></i>
+                                <span class="addCart">Thêm Phòng</span>
+                                <span class="Added">Đã Thêm</span>
+                            </button>
+                            <button class="btnxtt">
+                                <i class="fa-solid fa-eye"></i>
+                            </button>
+                        </div>
+                    </div>
+                </td>
+            </tr>
+        </table>
     </div>
     <div class="ThanhChuyen">
         <button class="PreviewBtn" onclick="SideSlide(-1)"><i class="fa fa-angle-left" aria-hidden="true"></i></button>
