--- a/KSBaoCuong2/Content/DatPhong.css
+++ b/KSBaoCuong2/Content/DatPhong.css
@@ -12,6 +12,7 @@ body {
     background-size: 100%;
     flex-direction: column;
 }
+
 .timkiem {
     margin: auto;
     display: flex;
@@ -56,34 +57,30 @@ body {
     background: #58629b;
     cursor: pointer;
 }
-.container{
-    position: relative;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 100px 50px;
-    padding: 100px 50px;
-    align-items: center;
-
+.content p {
+    margin-top: 10px;
 }
-    .container p{
-        margin-top: 10px;
+.container{
+    margin: 0 auto;
+    margin-top: 100px;
+    margin-bottom: 100px;
+}
+.card {
+    position: relative;
+    width: 350px;
+    height: 300px;
+    background: #fff;
+    border-radius: 20px;
+    box-shadow: 0 35px 80px rgba(0,0,0,.15);
+    transition: 0.5s;
+    justify-content: center;
+    display: flex;
+    justify-items: flex-start;
+}
+.card:hover {
+        height: 320px;
     }
-    .container .card {
-        position: relative;
-        width: 350px;
-        height: 300px;
-        background: #fff;
-        border-radius: 20px;
-        box-shadow: 0 35px 80px rgba(0,0,0,.15);
-        transition: 0.5s;
-        justify-content: center;
-        display: flex;
-        justify-items: flex-start;
-    }
-    .container .card:hover{
-        height: 280px;
-    }
-    .container .card .imgBox {
+.card .imgBox {
         position: absolute;
         background: #333;
         border-radius: 13px;
@@ -93,11 +90,11 @@ body {
         top: 20px;
         overflow: hidden;
     }
-    .container .card:hover .imgBox{
+.card:hover .imgBox{
         top: -100px;
         box-shadow: 0 15px 45px rgba(0,0,0,.2);
     }
-    .container .card .imgBox img {
+.card .imgBox img {
         position: absolute;
         top: 0;
         left: 0;
@@ -105,7 +102,7 @@ body {
         height: 100%;
         object-fit: cover;
     }
-    .container .card .content{
+.card .content{
         position: absolute;
         text-align: center;
         width: 100%;
@@ -115,7 +112,7 @@ body {
         padding: 0 30px;
         transition: 0.5s;
     }
-    .container .card:hover .content{
+.card:hover .content{
         height: 250px;
         top: 130px;
     }
